--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -50,7 +50,7 @@ layout: default
         }
 
         .section-title {
-            margin-bottom: 12px;
+            margin-bottom: 6px;
             font-weight: 800;
             color: #333;
             font-size: 15px;
@@ -102,6 +102,14 @@ layout: default
             border-radius: 2px;
             font-size: 11px;
             color: #666;
+        }
+
+        @media print {
+            .tag {
+                background-color: #f0f0f0 !important;
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
+            }
         }
 
         .contact-info {
@@ -166,7 +174,7 @@ layout: default
     </div>
 
     <div class="section">
-        <div class="section-title">Professional Experience</div>
+        <div class="section-title">Professional Experiences</div>
         {% for exp in page.experience %}
         <div class="experience-item">
             <div class="job-title">
