--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -76,7 +76,7 @@ layout: default
             display: flex;
             justify-content: space-between;
             align-items: baseline;
-            font-size: 14px;
+            font-size: 15px;
         }
 
         .company {
@@ -211,7 +211,7 @@ layout: default
             <div class="company">{{ exp.company }}</div>
             <ul>
                 {% for desc in exp.description %}
-                <li>{{ desc }}</li>
+                <li>{{ desc | markdownify }}</li>
                 {% endfor %}
             </ul>
             <div class="skills-tags">
@@ -234,7 +234,7 @@ layout: default
             <div class="company">{{ edu.institution }}</div>
             <ul>
                 {% for detail in edu.details %}
-                <li>{{ detail }}</li>
+                <li>{{ detail | markdownify }}</li>
                 {% endfor %}
             </ul>
         </div>
@@ -252,7 +252,7 @@ layout: default
             <div class="company">{{ publication.organization }}</div>
             <ul>
                 {% for detail in publication.details %}
-                <li>{{ detail }}</li>
+                <li>{{ detail | markdownify }}</li>
                 {% endfor %}
             </ul>
             <div class="skills-tags">
@@ -275,7 +275,7 @@ layout: default
             <div class="company">{{ cert.organization }}</div>
             <ul>
                 {% for detail in cert.details %}
-                <li>{{ detail }}</li>
+                <li>{{ detail | markdownify }}</li>
                 {% endfor %}
             </ul>
             <div class="skills-tags">
