--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -3,13 +3,13 @@
 
 <div itemscope itemtype="https://schema.org/Person" class="h-card">
 
-  {% if author.avatar %}
+  <!-- {% if author.avatar %}
     <div class="author__avatar">
       <a href="{{ author.home | default: '/' | absolute_url }}">
         <img src="{{ author.avatar | relative_url }}" alt="{{ author.name }}" itemprop="image" class="u-photo">
       </a>
     </div>
-  {% endif %}
+  {% endif %} -->
 
   <div class="author__content">
     <h3 class="author__name p-name" itemprop="name">
@@ -64,10 +64,10 @@
         </li>
       {% endif %}
 
-      {% if author.twitter %}
+      {% if author.x %}
         <li>
-          <a href="https://twitter.com/{{ author.twitter }}" itemprop="sameAs" rel="nofollow noopener noreferrer me">
-            <i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i><span class="label">Twitter</span>
+          <a href="https://x.com/{{ author.x }}" itemprop="sameAs" rel="nofollow noopener noreferrer me">
+            <i class="fab fa-fw fa-x-square" aria-hidden="true"></i><span class="label">X</span>
           </a>
         </li>
       {% endif %}
