chore: edit navicon

--- a/_layouts/linktree.html
+++ b/_layouts/linktree.html
@@ -247,6 +247,14 @@
 
         /* Mobile responsiveness */
         @media (max-width: 480px) {
+            body {
+                padding: 20px 15px;
+            }
+            
+            .page-wrapper {
+                padding-top: 20px;
+            }
+            
             .name {
                 font-size: 2.5rem;
             }
@@ -264,7 +272,8 @@
             
             /* Mobile navigation fixes */
             .nav-menu {
-                top: -50px;
+                top: 10px;
+                right: 15px;
             }
             
             .nav-toggle {
@@ -278,7 +287,7 @@
             
             .dropdown-menu {
                 min-width: 150px;
-                right: -10px;
+                right: 0;
             }
         }
     </style>
