--- a/_layouts/linktree.html
+++ b/_layouts/linktree.html
@@ -334,7 +334,7 @@
                 <div class="icon">
                     <div style="color: #fff; font-weight: 600; font-size: 14px; display: flex; align-items: center; justify-content: center; height: 100%; width: 100%;">G</div>
                 </div>
-                <span class="link-text">vendianugroho[at]gmail.com</span>
+                <span class="link-text">vendianugroho[at]gmail[dot]com</span>
             </a>
 
             <a href="https://medium.com/@ardiantovn" class="link-button" target="_blank" rel="noopener">
@@ -342,6 +342,13 @@
                     <path d="M13.54 12a6.8 6.8 0 01-6.77 6.82A6.8 6.8 0 010 12a6.8 6.8 0 016.77-6.82A6.8 6.8 0 0113.54 12zM20.96 12c0 3.54-1.51 6.42-3.38 6.42-1.87 0-3.39-2.88-3.39-6.42s1.52-6.42 3.39-6.42 3.38 2.88 3.38 6.42M24 12c0 3.17-.53 5.75-1.19 5.75-.66 0-1.19-2.58-1.19-5.75s.53-5.75 1.19-5.75C23.47 6.25 24 8.83 24 12z"/>
                 </svg>
                 <span class="link-text">medium.com/@ardiantovn</span>
+            </a>
+
+            <a href="https://substack.com/@ardiantovn" class="link-button" target="_blank" rel="noopener">
+                <div class="icon">
+                    <div style="color: #fff; font-weight: 600; font-size: 14px; display: flex; align-items: center; justify-content: center; height: 100%; width: 100%;">S</div>
+                </div>
+                <span class="link-text">substack.com/@ardiantovn</span>
             </a>
 
             <a href="https://github.com/ardiantovn" class="link-button" target="_blank" rel="noopener">
