--- a/_layouts/linktree.html
+++ b/_layouts/linktree.html
@@ -327,42 +327,42 @@
                 <div class="icon">
                     <div style="color: #fff; font-weight: 600; font-size: 14px; display: flex; align-items: center; justify-content: center; height: 100%; width: 100%;">in</div>
                 </div>
-                <span class="link-text">linkedin.com/in/vendianugroho</span>
+                <span class="link-text">Linkedin Profile</span>
             </a>
 
             <a href="mailto:vendianugroho@gmail.com" class="link-button">
                 <div class="icon">
                     <div style="color: #fff; font-weight: 600; font-size: 14px; display: flex; align-items: center; justify-content: center; height: 100%; width: 100%;">G</div>
                 </div>
-                <span class="link-text">vendianugroho[at]gmail[dot]com</span>
+                <span class="link-text">Email Me</span>
             </a>
 
             <a href="https://medium.com/@ardiantovn" class="link-button" target="_blank" rel="noopener">
                 <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M13.54 12a6.8 6.8 0 01-6.77 6.82A6.8 6.8 0 010 12a6.8 6.8 0 016.77-6.82A6.8 6.8 0 0113.54 12zM20.96 12c0 3.54-1.51 6.42-3.38 6.42-1.87 0-3.39-2.88-3.39-6.42s1.52-6.42 3.39-6.42 3.38 2.88 3.38 6.42M24 12c0 3.17-.53 5.75-1.19 5.75-.66 0-1.19-2.58-1.19-5.75s.53-5.75 1.19-5.75C23.47 6.25 24 8.83 24 12z"/>
                 </svg>
-                <span class="link-text">medium.com/@ardiantovn</span>
+                <span class="link-text">Medium Articles</span>
             </a>
 
             <a href="https://substack.com/@ardiantovn" class="link-button" target="_blank" rel="noopener">
                 <div class="icon">
                     <div style="color: #fff; font-weight: 600; font-size: 14px; display: flex; align-items: center; justify-content: center; height: 100%; width: 100%;">S</div>
                 </div>
-                <span class="link-text">substack.com/@ardiantovn</span>
+                <span class="link-text">Substack Newsletter</span>
             </a>
 
             <a href="https://github.com/ardiantovn" class="link-button" target="_blank" rel="noopener">
                 <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/>
                 </svg>
-                <span class="link-text">github.com/ardiantovn</span>
+                <span class="link-text">Code Repository</span>
             </a>
 
             <a href="https://vsco.co/ardiantovn/gallery" class="link-button" target="_blank" rel="noopener">
                 <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8zm0-14c-3.309 0-6 2.691-6 6s2.691 6 6 6 6-2.691 6-6-2.691-6-6-6zm0 10c-2.206 0-4-1.794-4-4s1.794-4 4-4 4 1.794 4 4-1.794 4-4 4z"/>
                 </svg>
-                <span class="link-text">vsco.co/ardiantovn</span>
+                <span class="link-text">VSCO Photo Gallery</span>
             </a>
         </div>
     </div>
