chore: change about icon and remove license

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -222,9 +222,10 @@ layout: default
 
     <div class="contact-info">
         <a href="mailto:{{ page.email }}"><i class="fas fa-envelope"></i> {{ page.email }}</a>
-        <a href="https://linkedin.com/in/{{ page.linkedin }}"><i class="fab fa-linkedin"></i> {{ page.linkedin }}</a>
-        <a href="https://github.com/{{ page.github }}"><i class="fab fa-github"></i> {{ page.github }}</a>
-        <a href="https://medium.com/@{{ page.medium }}"><i class="fab fa-medium"></i> {{ page.medium }}</a>
+        <a href="https://ardiantovn.com"><i class="fas fa-globe"></i> ardiantovn.com</a>
+        <!-- <a href="https://linkedin.com/in/{{ page.linkedin }}"><i class="fab fa-linkedin"></i> {{ page.linkedin }}</a> -->
+        <!-- <a href="https://github.com/{{ page.github }}"><i class="fab fa-github"></i> {{ page.github }}</a> -->
+        <!-- <a href="https://medium.com/@{{ page.medium }}"><i class="fab fa-medium"></i> {{ page.medium }}</a> -->
     </div>
 
     <div class="section">
