chore: edit link color

--- a/_layouts/linktree.html
+++ b/_layouts/linktree.html
@@ -358,7 +358,7 @@
 
             <a href="https://substack.com/@ardiantovn" class="link-button" target="_blank" rel="noopener">
                 <i class="fas fa-newspaper icon" style="font-size: 16px; display: flex; align-items: center; justify-content: center;"></i>
-                <span class="link-text">Substack Newsletter</span>
+                <span class="link-text">Substack</span>
             </a>
 
             <a href="https://github.com/ardiantovn" class="link-button" target="_blank" rel="noopener">
