chore: edit latex

--- a/_layouts/linktree.html
+++ b/_layouts/linktree.html
@@ -348,7 +348,7 @@
                 <div class="icon">
                     <div style="color: #fff; font-weight: 600; font-size: 14px; display: flex; align-items: center; justify-content: center; height: 100%; width: 100%;">G</div>
                 </div>
-                <span class="link-text">Email Me</span>
+                <span class="link-text">E-mail Me</span>
             </a>
 
             <a href="https://medium.com/@ardiantovn" class="link-button" target="_blank" rel="noopener">
