--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,4 +2,22 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
+<!-- MathJax configuration -->
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script>
+  window.MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']],
+      displayMath: [['$$', '$$'], ['\\[', '\\]']],
+      processEscapes: true,
+      processEnvironments: true
+    },
+    options: {
+      skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+      ignoreHtmlClass: 'katex'
+    }
+  };
+</script>
+
 <!-- end custom head snippets -->
