feat: favicon and edit cv

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,6 +1,8 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
+<link rel="icon" type="image/svg+xml" href="{{ '/assets/favicon.svg' | relative_url }}">
+<link rel="icon" type="image/png" href="{{ '/assets/favicon.svg' | relative_url }}">
 
 <!-- MathJax configuration -->
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
