--- a/_layouts/linktree.html
+++ b/_layouts/linktree.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vendi A. Nugroho</title>
+    <link rel="icon" type="image/svg+xml" href="{{ '/assets/icon/favicon.svg' | relative_url }}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/plus-jakarta-sans/2.0.0/plus-jakarta-sans.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
