chore: change medium icon

--- a/_layouts/linktree.html
+++ b/_layouts/linktree.html
@@ -353,7 +353,7 @@
             </a>
 
             <a href="https://medium.com/@ardiantovn" class="link-button" target="_blank" rel="noopener">
-                <img src="/assets/icon/Medium-Icon-Black.svg" class="icon" alt="Medium" style="width: 24px; height: 24px;">
+                <img src="/assets/icon/Medium-Icon-Black.svg" class="icon" alt="Medium">
                 <span class="link-text">Medium Articles</span>
             </a>
 
