--- a/_layouts/linktree.html
+++ b/_layouts/linktree.html
@@ -345,11 +345,11 @@
                 <span class="link-text">Linkedin Profile</span>
             </a>
 
-            <a href="mailto:vendianugroho@gmail.com" class="link-button">
+            <a href="https://www.upwork.com/freelancers/vendiardiantonugroho" class="link-button" target="_blank" rel="noopener">
                 <div class="icon">
-                    <div style="color: #fff; font-weight: 600; font-size: 14px; display: flex; align-items: center; justify-content: center; height: 100%; width: 100%;">G</div>
+                    <div style="color: #fff; font-weight: 600; font-size: 14px; display: flex; align-items: center; justify-content: center; height: 100%; width: 100%;">U</div>
                 </div>
-                <span class="link-text">E-mail Me</span>
+                <span class="link-text">Upwork Profile</span>
             </a>
 
             <a href="https://medium.com/@ardiantovn" class="link-button" target="_blank" rel="noopener">
@@ -374,6 +374,13 @@
                     <path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8zm0-14c-3.309 0-6 2.691-6 6s2.691 6 6 6 6-2.691 6-6-2.691-6-6-6zm0 10c-2.206 0-4-1.794-4-4s1.794-4 4-4 4 1.794 4 4-1.794 4-4 4z"/>
                 </svg>
                 <span class="link-text">VSCO Photo Gallery</span>
+            </a>
+
+            <a href="mailto:vendianugroho@gmail.com" class="link-button">
+                <div class="icon">
+                    <div style="color: #fff; font-weight: 600; font-size: 14px; display: flex; align-items: center; justify-content: center; height: 100%; width: 100%;">G</div>
+                </div>
+                <span class="link-text">E-mail Me</span>
             </a>
         </div>
     </div>
