feat: ga in linktree

--- a/_layouts/linktree.html
+++ b/_layouts/linktree.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/svg+xml" href="{{ '/assets/icon/favicon.svg' | relative_url }}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/plus-jakarta-sans/2.0.0/plus-jakarta-sans.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    {% include analytics.html %}
     <style>
         * {
             margin: 0;
