chore: change list arrow to star

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -195,7 +195,7 @@ layout: default
         }
 
         .section li:before {
-            content: "▸";
+            content: "*";
             position: absolute;
             left: 0;
             color: #666;
