--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -59,8 +59,8 @@ layout: default
         }
 
         .experience-item {
-            margin-bottom: 8px;
-            padding-bottom: 8px;
+            margin-bottom: 6px;
+            padding-bottom: 6px;
             border-bottom: 1px solid #eee;
         }
 
@@ -192,6 +192,10 @@ layout: default
             position: relative;
             padding-left: 10px;
             font-size: 12px;
+        }
+
+        li p {
+            margin: 0;
         }
 
         .section li:before {
